kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
        ports:
        - containerPort: 5432
      volumes:
        - name: postgres-data
          hostPath:
            path: /data/postgres_data # Or any directory you prefer for data persistence

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: NodePort
