kubernetes/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: default
  labels:
    app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: habilisv/fastapi:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        # env:
        # - name: POSTGRESQL_URL
        #   valueFrom:
        #     secretKeyRef:
        #       name: app-secret
        #       key: POSTGRESQL_URL
        # - name: POSTGRESQL_URL_SYNC
        #   valueFrom:
        #     secretKeyRef:
        #       name: app-secret
        #       key: POSTGRESQL_URL_SYNC
        # - name: JWT_SECRET_KEY
        #   valueFrom:
        #     secretKeyRef:
        #       name: app-secret
        #       key: JWT_SECRET_KEY
        # - name: JWT_ACCESS_TOKEN_EXPIRE_MINUTES
        #   valueFrom:
        #     secretKeyRef:
        #       name: app-secret
        #       key: JWT_ACCESS_TOKEN_EXPIRE_MINUTES
        # - name: JWT_REFRESH_TOKEN_EXPIRE_DAYS
        #   valueFrom:
        #     secretKeyRef:
        #       name: app-secret
        #       key: JWT_REFRESH_TOKEN_EXPIRE_DAYS
        # - name: JWT_ALGORITHM
        #   valueFrom:
        #     secretKeyRef:
        #       name: app-secret
        #       key: JWT_ALGORITHM
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: default
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
